--- a/gooloom-was/src/main/resources/application.properties
+++ b/gooloom-was/src/main/resources/application.properties
@@ -1,22 +1,26 @@
 ## Aurora - MySQL
 #spring.datasource.url=jdbc:mysql://prod-cgv-rds-db-1.cluster-cje7wp54eror.ap-northeast-2.rds.amazonaws.com:3306/cgv
-spring.datasource.url=jdbc:mysql://localhost:3306/gooloom
+spring.datasource.url=jdbc:mysql://localhost:3306/cgv
 spring.datasource.username=admin
 spring.datasource.password=qwer1234
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-#update the schema with the given values.
+# update the schema with the given values.
 spring.jpa.hibernate.ddl-auto=update
-#To beautify or pretty print the SQL
-spring.jpa.properties.hibernate.format_sql=true
-#show sql
-spring.jpa.properties.hibernate.show-sql=true
-#show parameter binding
-logging.level.org.hibernate.type.descriptor.sql=DEBUG
 
+# To beautify or pretty print the SQL
+spring.jpa.properties.hibernate.format_sql=true
+
+# Show SQL
+spring.jpa.show-sql=true
+
+# Show parameter binding
+logging.level.org.hibernate.type.descriptor.sql=TRACE
+
+# Log SQL statements
 logging.level.org.hibernate.SQL=DEBUG
 
-# schema.sql, data.sql ??? ?? ??
+# Schema initialization settings
 spring.sql.init.mode=always
 
-server.port=8000
+server.port=8080
