--- a/gooloom-was/src/main/resources/application.properties
+++ b/gooloom-was/src/main/resources/application.properties
@@ -1,9 +1,12 @@
 ## Aurora - MySQL
-#spring.datasource.url=jdbc:mysql://prod-cgv-rds-db-1.cluster-cje7wp54eror.ap-northeast-2.rds.amazonaws.com:3306/cgv
-spring.datasource.url=jdbc:mysql://localhost:3306/cgv
+spring.datasource.url=jdbc:mysql://prod-cgv-rds-db-1.cluster-cje7wp54eror.ap-northeast-2.rds.amazonaws.com:3306/cgv
+#spring.datasource.url=jdbc:mysql://localhost:3306/cgv
 spring.datasource.username=admin
 spring.datasource.password=qwer1234
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# Request method 'POST' not supported ?? ??
+spring.mvc.hiddenmethod.filter.enabled=true
 
 # update the schema with the given values.
 spring.jpa.hibernate.ddl-auto=update
@@ -13,6 +16,10 @@ spring.jpa.properties.hibernate.format_sql=true
 
 # Show SQL
 spring.jpa.show-sql=true
+
+# ???? ?? spring.jpa.open-in-view=false ?? ???? ??.
+# warning log ? ?? ???.
+spring.jpa.open-in-view=false
 
 # Show parameter binding
 logging.level.org.hibernate.type.descriptor.sql=TRACE
@@ -24,3 +31,7 @@ logging.level.org.hibernate.SQL=DEBUG
 spring.sql.init.mode=always
 
 server.port=8080
+
+tomcat.ajp.protocol=AJP/1.3
+tomcat.ajp.port=8001
+tomcat.ajp.enabled=true
