--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -8,21 +8,18 @@ on:
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
-
+    env:
+      # 어느 디렉토리에서 커맨드를 실행할 지 결정
+      working-directory: ./gooloom-was
     steps:
     - name: Checkout repository
-      uses: actions/checkout@v2
+      uses: actions/checkout@v3
 
     - name: Set up JDK
-      uses: actions/setup-java@v2
+      uses: actions/setup-java@v3
       with:
         java-version: 19  # Change this to your desired Java version
         distribution: 'temurin'
-
-    - name: Build and Package Spring Boot App
-      run: |
-        cd /Gooloom_CGV/gooloom-was
-        ./gradlew clean package
         
     - name: Set Date as Image Tag
       id: set_tag
@@ -32,6 +29,7 @@ jobs:
       run: |
         cd /Gooloom_CGV/gooloom-was
         docker buildx build --platform=linux/amd64 -t csm4903/gooloom-was:$IMAGE_TAG .
+      working-directory: ${{ env.working-directory }}
 
     - name: Log in to Docker Hub
       run: |
