--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -26,8 +26,7 @@ jobs:
       run: echo "IMAGE_TAG=$(date +'%Y%m%d%H%M%S')" >> $GITHUB_ENV
 
     - name: Build Docker image
-      run: |
-        cd /Gooloom_CGV/gooloom-was
+      run:
         docker buildx build --platform=linux/amd64 -t csm4903/gooloom-was:$IMAGE_TAG .
       working-directory: ${{ env.working-directory }}
 
