--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -1,41 +1,32 @@
-name: Build, Push, and Deploy Gooloom-CGV Spring Boot App (WAS)
-
+name: Gooloom-CGV-WAS - CI with Gihub Actions, Docker
 on:
   push:
-    branches:
-      - main  # Change this to your main branch name
+    branches: [ main ]
 
 jobs:
-  build-and-deploy:
+  deploy:
     runs-on: ubuntu-latest
-    env:
-      # 어느 디렉토리에서 커맨드를 실행할 지 결정
-      working-directory: ./gooloom-was
     steps:
-    - name: Checkout repository
-      uses: actions/checkout@v3
+      - name: 저장소 Checkout
+        uses: actions/checkout@v3
 
-    - name: Set up JDK
-      uses: actions/setup-java@v3
-      with:
-        java-version: 19  # Change this to your desired Java version
-        distribution: 'temurin'
-        
-    - name: Set Date as Image Tag
-      id: set_tag
-      run: echo "IMAGE_TAG=$(date +'%Y%m%d%H%M%S')" >> $GITHUB_ENV
-
-    - name: Build Docker image
-      run: |
-        cd ~
-        docker buildx build --platform=linux/amd64 -t csm4903/gooloom-was:$IMAGE_TAG .
-      working-directory: ${{ env.working-directory }}
-
-    - name: Log in to Docker Hub
-      run: |
-        docker login -u csm4903 -p ${{ secrets.DOCKERHUB_TOKEN }}
+      - name: 스프링부트 애플리케이션 빌드 # (1)
+        run: |
+          ls -a
+          ./gradlew build
+          
+      - name: Set Date as Image Tag
+        id: set_tag
+        run: echo "IMAGE_TAG=$(date +'%Y%m%d%H%M%S')" >> $GITHUB_ENV
       
-    - name: Push Docker image to Docker Hub
-      run: |
-        docker tag gooloom-was csm4903/gooloom-was:latest
-        docker push csm4903/gooloom-was:latest
+      - name: 도커 이미지 빌드 # (2)
+        run: docker build -t csm4903/gooloom-was:$IMAGE_TAG .
+
+      - name: Docker Hub 로그인 # (3)
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+      - name: Docker Hub 퍼블리시 # (4)
+        run: docker push csm4903/gooloom-was:$IMAGE_TAG
