--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -10,18 +10,19 @@ jobs:
       - name: 저장소 Checkout
         uses: actions/checkout@v3
 
-      - name: Set up JDK 11
+      - name: Set up JDK 17
         uses: actions/setup-java@v3
         with:
-          java-version: '11'
-          distribution: 'temurin'
-          cache: 'gradle'
+          java-version: '17'
+          distribution: 'adopt'
 
       - name: 스프링부트 애플리케이션 빌드 # (1)
         run: |
           cd gooloom-was
           sudo chmod +x gradlew
           sudo ./gradlew build
+        shell:
+          bash
           
       - name: Set Date as Image Tag
         id: set_tag
