--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -14,7 +14,7 @@ jobs:
         uses: actions/setup-java@v3
         with:
           java-version: '19'
-          distribution: 'oracle'
+          distribution: 'Wrapper'
 
       - name: 스프링부트 애플리케이션 빌드 # (1)
         run: |
