--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -29,7 +29,9 @@ jobs:
         run: echo "IMAGE_TAG=$(date +'%Y%m%d%H%M%S')" >> $GITHUB_ENV
       
       - name: 도커 이미지 빌드 # (2)
-        run: docker build -t csm4903/gooloom-was:$IMAGE_TAG .
+        run: |
+          cd gooloom-was
+          docker build -t csm4903/gooloom-was:$IMAGE_TAG .
 
       - name: Docker Hub 로그인 # (3)
         uses: docker/login-action@v2
