--- a/gooloom-was/src/main/resources/application.properties
+++ b/gooloom-was/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 ## Aurora - MySQL
-#spring.datasource.url=jdbc:mysql://prod-cgv-rds-db-1.cluster-cje7wp54eror.ap-northeast-2.rds.amazonaws.com:3306/cgv
-spring.datasource.url=jdbc:mysql://cgv-item.cluster-cv2vclmyzjam.ap-northeast-2.rds.amazonaws.com:3306/cgv
+spring.datasource.url=jdbc:mysql://prod-cgv-rds-db-1.cluster-cje7wp54eror.ap-northeast-2.rds.amazonaws.com:3306/cgv
+#spring.datasource.url=jdbc:mysql://cgv-item.cluster-cv2vclmyzjam.ap-northeast-2.rds.amazonaws.com:3306/cgv
 spring.datasource.username=admin
 spring.datasource.password=qwer1234
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
