--- a/ArgoCD/gooloom-was/gooloom-was-deployment.yaml
+++ b/ArgoCD/gooloom-was/gooloom-was-deployment.yaml
@@ -19,8 +19,9 @@ spec:
     spec:
       containers:
       - name: gooloom-was-container
-        image: csm4903/gooloom-was:v2.1.1
-	resources:
+        image: csm4903/gooloom-was:latest
+        imagePullPolicy: Always
+        resources:
           requests:
             memory: "0.8Gi"  # 예상되는 메모리 요구 사항
             # cpu: "0.5"     # 예상되는 CPU 요구 사항
