update req,lim / hpa avr

--- a/ArgoCD/gooloom-was/gooloom-was-deployment2.yaml
+++ b/ArgoCD/gooloom-was/gooloom-was-deployment2.yaml
@@ -25,8 +25,8 @@ spec:
             memory: 768Mi  # 예상되는 메모리 요구 사항
             cpu: 600m     # 예상되는 CPU 요구 사항
           limits:
-            memory: 1Gi  # 최대 메모리 제한
-            cpu: 1000m      # 최대 CPU 제한
+            memory: 768Mi  # 최대 메모리 제한 # 1Gi
+            cpu: 600m      # 최대 CPU 제한 # 1000m
         ports:
         - containerPort: 8080
 ---
