--- a/ArgoCD/gooloom-was/gooloom-hpa-was.yaml
+++ b/ArgoCD/gooloom-was/gooloom-hpa-was.yaml
@@ -10,7 +10,7 @@ spec:
   minReplicas: 2
   maxReplicas: 100
   metrics:
-  - type: Pods
+  - type: Resource
     resource:
       name: cpu
       target:
