update web image - csm4903/gooloom-web:modjk

--- a/ArgoCD/gooloom-web/gooloom-web-deployment2.yaml
+++ b/ArgoCD/gooloom-web/gooloom-web-deployment2.yaml
@@ -19,7 +19,7 @@ spec:
     spec:
       containers:
       - name: gooloom-web-container
-        image: csm4903/gooloom-web:v4.0.0
+        image: csm4903/gooloom-web:modjk
         resources:
           requests:
             memory: 512Mi # 384Mi
