--- a/ArgoCD/gooloom-web/gooloom-web-deployment2.yaml
+++ b/ArgoCD/gooloom-web/gooloom-web-deployment2.yaml
@@ -21,11 +21,11 @@ spec:
         image: csm4903/gooloom-web:modjk_latest
         resources:
           requests:
-            memory: 512Mi # 384Mi
-            cpu: 500m # 300m
-          limits:
-            memory: 512Mi
-            cpu: 500m
+            memory: 200Mi # 384Mi
+            cpu: 200m # 300m
+          # limits:
+            # memory: Mi
+            # cpu: 500m
         ports:
         - containerPort: 8080
 ---
