--- a/ArgoCD/gooloom-web/gooloom-web-deployment2.yaml
+++ b/ArgoCD/gooloom-web/gooloom-web-deployment2.yaml
@@ -19,6 +19,7 @@ spec:
       containers:
       - name: gooloom-web-container
         image: csm4903/gooloom-web:modjk_latest
+        imagePullPolicy: "Always"
         resources:
           requests:
             memory: 200Mi # 384Mi
