--- a/ArgoCD/gooloom-web/gooloom-web-deployment2.yaml
+++ b/ArgoCD/gooloom-web/gooloom-web-deployment2.yaml
@@ -18,7 +18,7 @@ spec:
     spec:
       containers:
       - name: gooloom-web-container
-        image: csm4903/gooloom-web:modjk_latest
+        image: csm4903/gooloom-web:modjk_gooloom
         imagePullPolicy: "Always"
         resources:
           requests:
