--- a/gooloom-was/src/main/resources/application.properties
+++ b/gooloom-was/src/main/resources/application.properties
@@ -1,9 +1,15 @@
 ## Aurora - MySQL
-spring.datasource.url=jdbc:mysql://prod-cgv-rds-db-1.cluster-cje7wp54eror.ap-northeast-2.rds.amazonaws.com:3306/cgv
+spring.datasource.primary.hikari.jdbc-url=jdbc:mysql://prod-cgv-rds-db-1.cluster-cje7wp54eror.ap-northeast-2.rds.amazonaws.com:3306/cgv
 #spring.datasource.url=jdbc:mysql://cgv-item.cluster-cv2vclmyzjam.ap-northeast-2.rds.amazonaws.com:3306/cgv
-spring.datasource.username=admin
-spring.datasource.password=qwer1234
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.primary.hikari.username=admin
+spring.datasource.primary.hikari.password=qwer1234
+spring.datasource.primary.hikari.driver-class-name=com.mysql.cj.jdbc.Driver
+
+
+spring.datasource.onpremise.hikari.jdbc-url=jdbc:mysql://100.0.11.12:3306/IDC_product_cli
+spring.datasource.onpremise.hikari.username=admin2
+spring.datasource.onpremise.hikari.password=Qwer1234@
+spring.datasource.onpremise.hikari.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # Request method 'POST' not supported ?? ??
 spring.mvc.hiddenmethod.filter.enabled=true
