--- a/ArgoCD/gooloom-was/gooloom-was-deployment2.yaml
+++ b/ArgoCD/gooloom-was/gooloom-was-deployment2.yaml
@@ -1,7 +1,7 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: gooloom-was-deployment
+  name: gooloom-web-deployment
 spec:
   strategy:
     type: RollingUpdate
