update deploy desired rep

--- a/ArgoCD/gooloom-was/gooloom-was-deployment2.yaml
+++ b/ArgoCD/gooloom-was/gooloom-was-deployment2.yaml
@@ -3,6 +3,7 @@ kind: Deployment
 metadata:
   name: gooloom-web-deployment
 spec:
+  desiredReplicas: 1
   strategy:
     type: RollingUpdate
     rollingUpdate:
