update was-hpa to web-hpa

--- a/ArgoCD/gooloom-was/gooloom-hpa-was.yaml
+++ b/ArgoCD/gooloom-was/gooloom-hpa-was.yaml
@@ -1,7 +1,7 @@
 apiVersion: autoscaling/v2
 kind: HorizontalPodAutoscaler
 metadata:
-  name: was-hpa
+  name: web-hpa
 spec:
   scaleTargetRef:
     apiVersion: apps/v1
